[lib]
crate-type = ["staticlib"]

[package]
name = "spotiqueue-worker"
version = "0.1.0"
authors = ["paul <423357+toothbrush@users.noreply.github.com>"]
edition = "2018"

[build-dependencies]
cbindgen = "0.19.0"

[dependencies]
lazy_static = "1.4.0"
librespot = "0.2.0"
once_cell = "1.7.2"
tokio = "1.6.0"
