[lib]
crate-type = ["staticlib", "rlib"]

[profile.release]
debug = 1

[package]
name = "spotiqueue-worker"
version = "0.1.0"
authors = ["paul <423357+toothbrush@users.noreply.github.com>"]
edition = "2018"

[build-dependencies]
cbindgen = "0.19.0"

[dependencies]
env_logger = "0.8.3"
librespot = "0.2.0"
log = "0.4.14"
once_cell = "1.7.2"
tokio = "1.6.0"
