[lib]
crate-type = ["staticlib", "rlib"]

[profile.release]
debug = 1

[package]
name = "spotiqueue_worker"
version = "0.2.0"
authors = ["paul <423357+toothbrush@users.noreply.github.com>"]
edition = "2018"

[build-dependencies]
cbindgen = "0.26.0"

[dependencies]
env_logger = "0.11.2"
librespot = "0.4.2"
log = "0.4.20"
once_cell = "1.19.0"
tokio = "1.36.0"
