[lib]
crate-type = ["staticlib", "rlib"]

[profile.release]
debug = 1

[package]
name = "spotiqueue_worker"
version = "0.2.0"
authors = ["paul <423357+toothbrush@users.noreply.github.com>"]
edition = "2018"

[build-dependencies]
cbindgen = "0.20.0"

# Hm everything has changed.  Gotta look here:
# https://github.com/librespot-org/librespot/releases/tag/v0.5.0 and hope they've updated their code
# examples, too.

[dependencies]
# env_logger v0.9.3 (latest: v0.11.5), but incompatible with librespot?
env_logger = "0.9.3"
librespot = "0.6.0"
log = "0.4.22"
once_cell = "1.20.2"
tokio = "1.41.0"
