[lib]
crate-type = ["staticlib", "rlib"]

[profile.release]
debug = 1

[package]
name = "spotiqueue_worker"
version = "0.2.0"
authors = ["paul <423357+toothbrush@users.noreply.github.com>"]
edition = "2018"

[build-dependencies]
cbindgen = "0.29.2"

[dependencies]
env_logger = "0.11.8"
librespot = "0.8.0"
log = "0.4.28"
once_cell = "1.21.3"
tokio = "1.48.0"
